# fft-src-nyquist-suppression

./: LICENSE  README.md  benchmark.py  comparison.py  example.py  irs.py  plot_tapers_irs.py  plots.mplstyle  pyproject.toml  taper.py
.github/workflows/: static.yml
lib/: resamp.py  tabular.py  taper.py  util.py
output/: benchmark.txt  comparison.txt
website/: index.html
